--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cool Blue Video Editor</title>
+<title>Kp Edits</title>
 
 <style>
     body {
@@ -87,7 +87,7 @@
 <body>
 
 <div class="glass-box">
-    <h1>💙 Cool Blue Video Editor</h1>
+    <h1>Kp Edits</h1>
 
     <input type="file" id="videoInput" accept="video/*"><br>
 
